# kotary_data_analysis

./: .buildinfo  .gitignore  README.md  build_docs.sh  doc_requirements.txt  genindex.html  index.html  note_00_EDA_Sheet1.html  note_01_EDA_Sheet2.html  note_02_Kothari_Stats.html  note_03_Kothari_Regression.html  note_04_Gender_Weight_Analysis.html  note_05_Gender_Weight_Analysis_Controlled.html  note_06_Gender_Weight_Analysis_Sin_CODELCO.html  objects.inv  page_00_kothari_index.html  page_01_intro.html  page_01_new_intro.html  page_02_method.html  page_02_old_method.html  page_03_new_method.html  page_03_results.html  page_04_discussion.html  pyproject.toml  references_check.html  references_check_suficiencia.html  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree  note_00_EDA_Sheet1.doctree  note_01_EDA_Sheet2.doctree  note_02_Kothari_Stats.doctree  note_03_Kothari_Regression.doctree  note_04_Gender_Weight_Analysis.doctree  note_05_Gender_Weight_Analysis_Controlled.doctree  note_06_Gender_Weight_Analysis_Sin_CODELCO.doctree  page_00_kothari_index.doctree  page_01_intro.doctree  page_01_new_intro.doctree  page_02_method.doctree  page_02_old_method.doctree  page_03_new_method.doctree  page_03_results.doctree  page_04_discussion.doctree  references_check.doctree  references_check_suficiencia.doctree
.github/workflows/: gh-pages.yml
_sources/: index.rst.txt  note_00_EDA_Sheet1.md.txt  note_02_Kothari_Stats.md.txt  note_03_Kothari_Regression.md.txt  note_04_Gender_Weight_Analysis.md.txt  note_05_Gender_Weight_Analysis_Controlled.md.txt  note_06_Gender_Weight_Analysis_Sin_CODELCO.md.txt  page_00_kothari_index.md.txt  page_01_intro.md.txt  page_01_new_intro.md.txt  page_02_method.md.txt  page_03_results.md.txt  page_04_discussion.md.txt  references_check_suficiencia.md.txt
conf/: logging.yml
conf/base/: catalog.yml
docs/: README.md  modern_references.md
docs/source/: conf.py  index.rst  note_01_EDA_Sheet2.md  note_02_Kothari_Stats.md  note_03_Kothari_Regression.md  note_05_Gender_Weight_Analysis_Controlled.md  note_06_Gender_Weight_Analysis_Sin_CODELCO.md  page_01_intro.md  page_01_kothari_paper_section.md  page_01_new_intro.md  page_02_kothari_new_paper_section.md  page_02_method.md  page_02_old_method.md  page_03_kothari_new_method.md  page_03_new_method.md  page_03_results.md  page_04_discussion.md  references_check.md
notebooks/: 00_EDA_Sheet1.ipynb  01_EDA.ipynb  01_EDA_Sheet2.ipynb  02_Clean_Data.ipynb  03_Calculate_Kothari_Index.ipynb  04_Gender_Weight_Analysis.ipynb  05_Gender_Weight_Analysis_Controlled.ipynb  06_Gender_Weight_Analysis_Sin_CODELCO.ipynb  1_Data_Review.ipynb
src/kotari_gender_data_analysis/: __init__.py  __main__.py  settings.py
