[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.11"
name = "kotari_gender_data_analysis"
readme = "README.md"
dynamic = [ "version",]
dependencies = [
    "kedro",
    "pandas",
    "matplotlib",
    "ipython>=8.10",
    "jupyterlab>=3.0",
    "kedro-datasets[matplotlib-matplotlibwriter,pandas,pandas-csvdataset,pandas-exceldataset,pandas-parquetdataset,plotly-jsondataset,plotly-plotlydataset]>=3.0",
    "kedro-viz>=6.7.0",
    "kedro[jupyter]~=0.19.11",
    "scikit-learn~=1.5.1",
    "seaborn~=0.12.1",
    "numpy>=1.26.0, <2.0.0",
    "scipy>=1.8.0",
    "notebook",
    "openpyxl>=3.1.5",
    "myst-parser>=2.0.0",
    "sphinx>=7.2.6",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-autodoc-typehints>=1.20.2",
    "nbsphinx>=0.8.1",
    "sphinx-copybutton>=0.5.2",
]

[project.scripts]
kotari-gender-data-analysis = "kotari_gender_data_analysis.__main__:main"

[project.optional-dependencies]
docs = [ "docutils<0.21", "sphinx>=5.3,<7.3", "sphinx_rtd_theme==2.0.0", "nbsphinx==0.8.1", "sphinx-autodoc-typehints==1.20.2", "sphinx_copybutton==0.5.2", "ipykernel>=5.3, <7.0", "Jinja2<3.2.0", "myst-parser>=1.0,<2.1",]
dev = [ "pytest-cov~=3.0", "pytest-mock>=1.7.1, <2.0", "pytest~=7.2", "ruff~=0.12.0",]


[tool.kedro]
package_name = "kotari_gender_data_analysis"
project_name = "kotari-gender-data-analysis"
kedro_init_version = "0.19.15"
tools = "['Custom Logging', 'Documentation', 'Data Structure']"
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.version]
attr = "kotari_gender_data_analysis.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "ccebd8dccd95401296e9b23cc6a0ddd6"
